syntax = "proto3";

option csharp_namespace = "OrganizationService";

package auth;

// Authentication service for token validation
service AuthenticationService {
  // Validate a JWT token
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  
  // Get user information by ID
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  
  // Get user information by email
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserResponse);
}

// Request to validate a JWT token
message ValidateTokenRequest {
  string token = 1;
}

// Response for token validation
message ValidateTokenResponse {
  bool is_valid = 1;
  string user_id = 2;
  string email = 3;
  string full_name = 4;
  string error_message = 5;
  int64 expires_at = 6; // Unix timestamp
}

// Request to get user by ID
message GetUserRequest {
  string user_id = 1;
}

// Request to get user by email
message GetUserByEmailRequest {
  string email = 1;
}

// Response with user information
message GetUserResponse {
  bool found = 1;
  string user_id = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  string full_name = 6;
  string provider = 7;
  string profile_picture_url = 8;
  bool email_verified = 9;
  bool is_active = 10;
  int64 created_at = 11; // Unix timestamp
  int64 last_login_at = 12; // Unix timestamp
  string error_message = 13;
}
